--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,12 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#spring.jackson.date-format=dd/MM/yyyy HH:mm
+#spring.jackson.time-zone=Brazil/East
+#spring.jackson.locale=pt-BR
+
 #logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.output.ansi.enabled=ALWAYS
