--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,9 @@ default.sender=
 default.recipient=
 
 jwt.secret=${JWT_SECRET}
-jwt.expiration=60000
+jwt.expiration=86400000
+
+aws.access_key_id=${AWS_ACESS_KEY_ID}
+aws.secret_access_key=${AWS_SECRET_ACESS_KEY}
+s3.bucket=spring-boot-study
+s3.region=sa-east-1
