--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ aws.access_key_id=${AWS_ACESS_KEY_ID}
 aws.secret_access_key=${AWS_SECRET_ACESS_KEY}
 s3.bucket=spring-boot-study
 s3.region=sa-east-1
+
+img.prefix.client.profile=cp
