--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -9,6 +9,7 @@ jobs:
   build:
     name: Build and analyze
     runs-on: ubuntu-latest
+    environment: development
     steps:
       - uses: actions/checkout@v3
         with:
