--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ img.profile.size=200
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/api-docs
