--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.7</version>
+        <version>3.1.9</version>
         <relativePath/>
     </parent>
     <groupId>com.joaolucas</groupId>
@@ -20,6 +20,8 @@
         <sonar.organization>joaocipriano</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <io.jsonwebtoken.version>0.11.5</io.jsonwebtoken.version>
+        <pitest.version>1.15.2</pitest.version>
+        <pitest.junit.plugin.version>1.2.1</pitest.junit.plugin.version>
     </properties>
 
     <dependencies>
@@ -92,7 +94,7 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk</artifactId>
-            <version>1.12.482</version>
+            <version>1.12.663</version>
             <exclusions>
                 <exclusion>
                     <groupId>commons-logging</groupId>
@@ -126,6 +128,11 @@
             <version>0.2.6</version>
         </dependency>
         <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>openapi-generator-online</artifactId>
+            <version>7.2.0</version>
+        </dependency>
+        <dependency>
             <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-annotations</artifactId>
             <version>2.2.19</version>
@@ -151,7 +158,7 @@
         <dependency>
             <groupId>org.pitest</groupId>
             <artifactId>pitest-parent</artifactId>
-            <version>1.14.2</version>
+            <version>${pitest.version}</version>
             <type>pom</type>
         </dependency>
     </dependencies>
@@ -177,7 +184,7 @@
             <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
-                <version>7.1.0</version>
+                <version>7.2.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -194,6 +201,7 @@
                                 <apiPackage>com.joaolucas.api</apiPackage>
                                 <useSpringBoot3>true</useSpringBoot3>
                                 <useBeanValidation>true</useBeanValidation>
+                                <useTags>true</useTags>
                             </configOptions>
                         </configuration>
                     </execution>
@@ -235,7 +243,7 @@
             <plugin>
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
-                <version>1.14.2</version>
+                <version>${pitest.version}</version>
                 <configuration>
                     <mutationThreshold>80</mutationThreshold>
                     <coverageThreshold>80</coverageThreshold>
@@ -247,7 +255,7 @@
                     <dependency>
                         <groupId>org.pitest</groupId>
                         <artifactId>pitest-junit5-plugin</artifactId>
-                        <version>1.1.2</version>
+                        <version>${pitest.junit.plugin.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
