--- a/src/main/resources/api.yml
+++ b/src/main/resources/api.yml
@@ -1,23 +1,198 @@
 openapi: 3.0.3
 servers:
-  - url: "http://localhost:8080"
+  - url: 'http://localhost:8080'
 info:
   title: spring-boot-study
   version: 1.0.0
-
 paths:
-  /ping:
-    get:
-      summary: Ping Pong
-      operationId: ping
-      description: Send ping message
+  /auth/register:
+    post:
+      tags:
+        - Authentication
+      operationId: register
+      summary: Register a user
+      requestBody:
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/RegisterRequest'
       responses:
-        "201":
+        '200':
           description: Response to the message
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/MessageResponse"
+                $ref: '#/components/schemas/AuthenticationResponse'
+  /auth/authenticate:
+    post:
+      tags:
+        - Authentication
+      summary: Authenticate a user
+      operationId: authenticate
+      requestBody:
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/AuthenticationRequest'
+      responses:
+        '200':
+          description: Response to the message
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthenticationResponse'
+  /auth/refresh-token:
+    post:
+      tags:
+        - Authentication
+      summary: Refresh the token
+      operationId: refreshToken
+      security:
+        - bearerAuth: [ ]
+      responses:
+        '200':
+          description: Response to the message
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthenticationResponse'
+  /auth/forgot:
+    post:
+      tags:
+        - Authentication
+      summary: Forgot the password
+      operationId: forgot
+      requestBody:
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/ForgotPasswordRequest'
+      responses:
+        '204':
+          description: 'The new password has been sent'
+
+  /categories/{id}:
+    get:
+      tags:
+        - Category
+      operationId: getById
+      summary: Retrieve a category by ID
+      parameters:
+        - name: id
+          in: 'path'
+          description: Category ID
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Response to the message
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CategoryResponse'
+    put:
+      tags:
+        - Category
+      operationId: update
+      summary: Update an existing category
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CategoryRequest'
+      responses:
+        '204':
+          description: The category has been updated successfully
+    delete:
+      tags:
+        - Category
+      operationId: delete
+      summary: Remove an existing category
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '204':
+          description: Category has been removed successfully
+  /categories:
+    get:
+      tags:
+        - Category
+      operationId: findAll
+      summary: Retrieve all categories
+      responses:
+        '200':
+          description: Response to the message
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CategoryResponse'
+    post:
+      tags:
+        - Category
+      operationId: create
+      summary: Create a new category
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CategoryRequest'
+      responses:
+        '201':
+          description: Category has been created successfully
+  /categories/page:
+    get:
+      tags:
+        - Category
+      operationId: findPage
+      summary: Returns a category page
+      parameters:
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 0
+        - name: linesPerPage
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 24
+        - name: orderBy
+          in: query
+          required: false
+          schema:
+            type: string
+            default: name
+        - name: direction
+          in: query
+          required: false
+          schema:
+            type: string
+            enum: [ ASC, DESC ]
+            default: ASC
+      responses:
+        '200':
+          description: Página de categorias retornada com sucesso
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PageCategoryResponse'
 
 components:
   schemas:
@@ -25,3 +200,75 @@ components:
       properties:
         text:
           type: string
+    RegisterRequest:
+      properties:
+        firstName:
+          type: string
+        lastName:
+          type: string
+        email:
+          type: string
+        password:
+          type: string
+    AuthenticationRequest:
+      properties:
+        email:
+          type: string
+        password:
+          type: string
+    AuthenticationResponse:
+      properties:
+        token:
+          type: string
+    ForgotPasswordRequest:
+      required:
+        - email
+      properties:
+        email:
+          type: string
+          format: email
+    CategoryResponse:
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        products:
+          type: array
+          items:
+            type: object
+            $ref: '#/components/schemas/ProductResponse'
+    CategoryRequest:
+      type: object
+      properties:
+        name:
+          type: string
+          minLength: 5
+          maxLength: 80
+    PageCategoryResponse:
+      type: object
+      properties:
+        content:
+          type: array
+          items:
+            $ref: '#/components/schemas/CategoryResponse'
+        totalPages:
+          type: integer
+          format: int32
+        totalElements:
+          type: integer
+          format: int64
+    ProductResponse:
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        price:
+          type: number
+
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
